


class AgendaController{

    constructor() {

    }


    agendarConsulta(){

    }

    listarAgenda(periodoInicio = undefined, periodoFim = undefined){
         
    }
}